GSettings Backend: Fix GIO module install path
Fix GIO module install path with correct usage of execute process and
variable expansion.
Thanks for noticing @markus2330

--- a/src/bindings/gsettings/CMakeLists.txt
+++ b/src/bindings/gsettings/CMakeLists.txt
@@ -48,11 +48,12 @@ if (CMAKE_VERSION GREATER 3.3)
 	pkg_get_variable (GIO_MODULE_DIR gio-2.0 giomoduledir)
 else ()
 	execute_process (
-		COMMAND PKG_CONFIG_EXECUTABLE --variable=giomoduledir
-		OUTPUT GIO_MODULE_DIR
+		COMMAND ${PKG_CONFIG_EXECUTABLE} --variable=giomoduledir gio-2.0
+		OUTPUT_VARIABLE GIO_MODULE_DIR
+		OUTPUT_STRIP_TRAILING_WHITESPACE
 	)
 endif ()
-install (TARGETS elektrasettings LIBRARY DESTINATION GIO_MODULE_DIR)
+install (TARGETS elektrasettings LIBRARY DESTINATION ${GIO_MODULE_DIR})
 
 if (CMAKE_SOURCE_DIR STREQUAL CMAKE_BINARY_DIR)
 	if (NOT FORCE_IN_SOURCE_BUILD)
