gsettings: only install for system-install
honor INSTALL_SYSTEM_FILES
avoid installing to system if user wants to install to home directory
@sirblackheart

--- a/src/bindings/gsettings/CMakeLists.txt
+++ b/src/bindings/gsettings/CMakeLists.txt
@@ -53,7 +53,10 @@ else ()
 		OUTPUT_STRIP_TRAILING_WHITESPACE
 	)
 endif ()
-install (TARGETS elektrasettings LIBRARY DESTINATION ${GIO_MODULE_DIR})
+
+if (INSTALL_SYSTEM_FILES)
+	install (TARGETS elektrasettings LIBRARY DESTINATION ${GIO_MODULE_DIR})
+endif (INSTALL_SYSTEM_FILES)
 
 if (CMAKE_SOURCE_DIR STREQUAL CMAKE_BINARY_DIR)
 	if (NOT FORCE_IN_SOURCE_BUILD)
