python2: add version in warning

--- a/src/plugins/python2/CMakeLists.txt
+++ b/src/plugins/python2/CMakeLists.txt
@@ -64,6 +64,6 @@ if (ADDTESTING_PHASE)
 			install (DIRECTORY ${CMAKE_SOURCE_DIR}/src/plugins/python/python/ DESTINATION "${TARGET_TEST_DATA_FOLDER}/python2")
 		endif ()
 	else ()
-		message (WARNING "swig_python bindings are required for testing, test deactivated")
+		message (WARNING "swig_python2 bindings are required for testing, test deactivated")
 	endif ()
 endif ()
