--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -72,6 +72,7 @@ set (KDB_VERSION_MINOR 8)
 set (KDB_VERSION_MICRO 17)
 
 set (KDB_VERSION "${KDB_VERSION_MAJOR}.${KDB_VERSION_MINOR}.${KDB_VERSION_MICRO}")
+message (STATUS "You are building Elektra ${KDB_VERSION}")
 
 set (SO_VERSION 4)
 set (SO_VERSION_TOOLS 0)
