cmake: make include message consistent
@sirblackheart

--- a/src/bindings/CMakeLists.txt
+++ b/src/bindings/CMakeLists.txt
@@ -35,7 +35,7 @@ if (FINDEX GREATER -1)
 	endif ()
 	list (FIND BINDINGS "gsettings" FINDEX)
 	if (FINDEX GREATER -1)
-		message (STATUS "Include GSettings Backend")
+		message (STATUS "Include Binding GSettings")
 		add_subdirectory (gsettings)
 	endif ()
 endif ()
