--- a/src/tools/qt-gui/CMakeLists.txt
+++ b/src/tools/qt-gui/CMakeLists.txt
@@ -14,7 +14,7 @@ elseif (NOT DISCOUNT_FOUND)
 else()
 
 if (NOT Qt5Svg_FOUND)
-	message(STATUS "No Qt5 svg module found. Svg icons themes will not be supported.")
+	message(WARNING "No Qt5 svg module found. Svg icons themes will not be supported.")
 endif ()
 
 include_directories (
