ASAN: support on clang and fixed GIR buildin with UBSAN
This commit adds support for llvm/clang adress sanitizer.
It can be can only be enabled with `-DENABLE_ASAN=ON`. Fixes #801
It also fixes problems when compiling GI bindings with the undefined
behavior sanitizer by passing the corresponding libraries (-lubsan
-lasan). Fixes #786

--- a/src/bindings/gi/CMakeLists.txt
+++ b/src/bindings/gi/CMakeLists.txt
@@ -22,13 +22,15 @@ if (INTROSPECTION_FOUND)
 
 	add_custom_command(
 		OUTPUT ${GIR_FILE}
-		COMMAND ${INTROSPECTION_SCANNER}
+		COMMAND ${DISABLE_LSAN}
+			${INTROSPECTION_SCANNER}
 			--warn-all --warn-error
 			--namespace=${GIR_NS}
 			--symbol-prefix=${GIR_SYMBOL_PREFIX}
 			--nsversion=${SO_VERSION}.0
 			--no-libtool
 			--library-path=${GELEKTRA_LIBRARY_DIR}
+			${ASAN_LIBRARY}
 			--library=${GELEKTRA_LIBRARY}
 			--include=GObject-2.0
 			-I${GIR_INCDIRS}
