shell recorder: Add testcases to "make test"
all files with *.dat ending in the shell_recorder folder will be
executed at make test.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -49,6 +49,7 @@ include_directories(data)
 
 add_subdirectory (cframework)
 add_subdirectory (shell)
+add_subdirectory (shell/shell_recorder)
 add_subdirectory (abi)
 add_subdirectory (ctest)
 if (ENABLE_KDB_TESTING)
