Use cmake GNUInstallDir for /etc files
Using the GNUInstallDir module of cmake to make the installation of this
two files honor the CMAKE_INSTALL_PREFIX variable while staying conform
to GNU and FHS.

--- a/scripts/CMakeLists.txt
+++ b/scripts/CMakeLists.txt
@@ -23,12 +23,13 @@ install (PROGRAMS upgrade-bootstrap DESTINATION ${TARGET_TOOL_EXEC_FOLDER})
 
 install (PROGRAMS umount-all DESTINATION ${TARGET_TOOL_EXEC_FOLDER})
 
+include (GNUInstallDirs)
 if (INSTALL_SYSTEM_FILES)
 	install (FILES kdb-bash-completion
-			DESTINATION /etc/bash_completion.d
+			DESTINATION ${CMAKE_INSTALL_FULL_SYSCONFDIR}/bash_completion.d
 			RENAME kdb)
 	install (FILES elektraenv.sh
-			DESTINATION /etc/profile.d
+			DESTINATION ${CMAKE_INSTALL_FULL_SYSCONFDIR}/profile.d
 			RENAME kdb.sh)
 endif()
 
