Order Preserving Minimal Perfect Hash Map: Build data structures
PR feedback

--- a/tests/ctest/CMakeLists.txt
+++ b/tests/ctest/CMakeLists.txt
@@ -1,6 +1,9 @@
 file (GLOB TESTS test_*.c)
 foreach (file ${TESTS})
 	get_filename_component (name ${file} NAME_WE)
+	if (${name} MATCHES "opmphm" AND LOOKUP_OPMPHM)
+		continue()
+	endif(${name} MATCHES "opmphm" AND LOOKUP_OPMPHM)
 	do_test (${name})
 	target_link_elektra(${name} elektra-kdb)
 endforeach (file ${TESTS})
