--- a/tests/ctest/CMakeLists.txt
+++ b/tests/ctest/CMakeLists.txt
@@ -1,9 +1,9 @@
 file (GLOB TESTS test_*.c)
 foreach (file ${TESTS})
 	get_filename_component (name ${file} NAME_WE)
-	if (${name} MATCHES "opmphm" AND LOOKUP_OPMPHM)
+	if (${name} MATCHES "opmphm" AND NOT LOOKUP_OPMPHM)
 		continue()
-	endif(${name} MATCHES "opmphm" AND LOOKUP_OPMPHM)
+	endif(${name} MATCHES "opmphm" AND NOT LOOKUP_OPMPHM)
 	do_test (${name})
 	target_link_elektra(${name} elektra-kdb)
 endforeach (file ${TESTS})
