Order Preserving Minimal Perfect Hash Map: Build data structures
rename build flag and document it.

--- a/tests/ctest/CMakeLists.txt
+++ b/tests/ctest/CMakeLists.txt
@@ -1,9 +1,9 @@
 file (GLOB TESTS test_*.c)
 foreach (file ${TESTS})
 	get_filename_component (name ${file} NAME_WE)
-	if (${name} MATCHES "opmphm" AND NOT LOOKUP_OPMPHM)
+	if (NOT HASHLOOKUP AND ${name} MATCHES "opmphm")
 		continue()
-	endif(${name} MATCHES "opmphm" AND NOT LOOKUP_OPMPHM)
+	endif(NOT HASHLOOKUP AND ${name} MATCHES "opmphm")
 	do_test (${name})
 	target_link_elektra(${name} elektra-kdb)
 endforeach (file ${TESTS})
