shell recorder: merge + move files + change to esr file ending

--- a/tests/shell/shell_recorder/CMakeLists.txt
+++ b/tests/shell/shell_recorder/CMakeLists.txt
@@ -1,12 +1,12 @@
 if (ENABLE_KDB_TESTING)
         # set kdb command
         SET(USE_CMAKE_KDB_COMMAND "")
-        if (BUILD_FULL)
+	if (BUILD_SHARED)
+                set (KDB_COMMAND "${CMAKE_BINARY_DIR}/bin/kdb")
+        elseif (BUILD_FULL)
                 set (KDB_COMMAND "${CMAKE_BINARY_DIR}/bin/kdb-full")
         elseif (BUILD_STATIC)
                 set (KDB_COMMAND "${CMAKE_BINARY_DIR}/bin/kdb-static")
-        else (BUILD_SHARED)
-                set (KDB_COMMAND "${CMAKE_BINARY_DIR}/bin/kdb")
         else()
                 message(SEND_ERROR "no kdb tool found, please enable BUILD_FULL, BUILD_STATIC or BUILD_SHARED")
         endif ()
@@ -16,7 +16,7 @@ if (ENABLE_KDB_TESTING)
                         @ONLY
                 )
 
-        file (GLOB SCRIPT_TESTS *.dat)
+        file (GLOB SCRIPT_TESTS *.esr)
         foreach (file ${SCRIPT_TESTS})
                 get_filename_component (name ${file} NAME)
                 get_filename_component (testname_we ${name} NAME_WE)
