gitresolver: cmake file and README.md

--- a/src/plugins/gitresolver/CMakeLists.txt
+++ b/src/plugins/gitresolver/CMakeLists.txt
@@ -1,20 +1,16 @@
 include (LibAddMacros)
-#if (DEPENDENCY_PHASE)
-    #    find_package(LibGit2)
-    #    if (NOT LibGit2_FOUND)
-        #        remove_plugin (gitresolver "Cannot find libgit2-dev")
-        #    endif ()
-    #endif ()
-set (CMAKE_SHARED_LINKER_FLAGS "-lgit2")
+if (DEPENDENCY_PHASE)
+	find_package(LibGit2)
+	if (NOT LibGit2_FOUND)
+		remove_plugin (gitresolver "Cannot find libgit2-dev")
+	endif ()
+endif ()
 add_plugin (gitresolver
 	SOURCES
 		gitresolver.h
 		gitresolver.c
-        #    INCLUDE_DIRECTORIES
-    #    ${LibGit2_INCLUDE_DIR}
-    #    LINK_LIBRARIES
-    #    ${LibGit2_LIBRARIES}
-    LINK_LIBRARIES
-        "git2"
-        ADD_TEST
-	)
+	INCLUDE_DIRECTORIES
+		${LibGit2_INCLUDE_DIR}
+	LINK_LIBRARIES
+		${LibGit2_LIBRARIES}
+)
