Build: Only generate `kdberrors.h` once
Before this commit multiple targets would generate `kdberrors.h` in
parallel. Therefore it was possible that one build process would
overwrite `kdberrors.h` – with exactly the same content as before –
while another process was reading the file.

This commit fixes #674.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -17,6 +17,7 @@ macro (do_test source)
 	add_headers(SOURCES)
 	add_testheaders(SOURCES)
 	add_executable (${source} ${SOURCES})
+	add_dependencies (${source} kdberrors_generated)
 
 	if (INSTALL_TESTING)
 		install (TARGETS ${source}
