--- a/src/libs/elektra/CMakeLists.txt
+++ b/src/libs/elektra/CMakeLists.txt
@@ -70,6 +70,7 @@ if (BUILD_SHARED)
 
 	get_property (elektra-shared_SRCS GLOBAL PROPERTY elektra-shared_SRCS)
 	add_library (elektra-core SHARED ${CORE_FILES} ${elektra-shared_SRCS})
+	add_dependencies (elektra-core kdberrors_generated)
 
 	get_property (elektra-shared_LIBRARIES GLOBAL PROPERTY elektra-shared_LIBRARIES)
 	target_link_libraries (elektra-core ${elektra-shared_LIBRARIES})
@@ -81,6 +82,7 @@ if (BUILD_SHARED)
 
 
 	add_library (elektra-kdb SHARED ${KDB_FILES})
+	add_dependencies (elektra-kdb kdberrors_generated)
 	target_link_libraries (elektra-kdb elektra-core)
 
 
@@ -89,6 +91,7 @@ if (BUILD_SHARED)
 	#message(STATUS "ignore the following ADD_LIBRARY warning")
 	#add_library (elektra INTERFACE) # no SOVERSION?
 	add_library (elektra SHARED  ${KDB_FILES} ${CORE_FILES}  ${elektra-shared_SRCS})
+	add_dependencies (elektra kdberrors_generated)
 	get_property (elektra-extension_LIBRARIES GLOBAL PROPERTY elektra-extension_LIBRARIES)
 	target_link_libraries (elektra ${elektra-shared_LIBRARIES})
 	#target_link_libraries (elektra ${elektra-extension_LIBRARIES})
@@ -144,6 +147,7 @@ endif (BUILD_FULL OR BUILD_STATIC)
 
 if (BUILD_FULL)
 	add_library (elektra-full SHARED ${SOURCES})
+	add_dependencies (elektra-full kdberrors_generated)
 
 	target_link_libraries (elektra-full ${elektra-full_LIBRARIES})
 
@@ -167,6 +171,7 @@ endif (BUILD_FULL)
 
 if (BUILD_STATIC)
 	add_library (elektra-static STATIC ${SOURCES})
+	add_dependencies (elektra-static kdberrors_generated)
 
 	target_link_libraries (elektra-static ${elektra-full_LIBRARIES})
 
