Shell recorder: exclude apple os :(

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -49,7 +49,9 @@ include_directories(data)
 
 add_subdirectory (cframework)
 add_subdirectory (shell)
-add_subdirectory (shell/shell_recorder)
+if(NOT APPLE)
+	add_subdirectory (shell/shell_recorder)
+endif(NOT APPLE)
 add_subdirectory (abi)
 add_subdirectory (ctest)
 if (ENABLE_KDB_TESTING)
