ruby: first version of ruby bindings
This is still a VERY early stage

--- a/src/bindings/swig/CMakeLists.txt
+++ b/src/bindings/swig/CMakeLists.txt
@@ -14,3 +14,8 @@ list (FIND BINDINGS "swig_lua" FINDEX)
 if (FINDEX GREATER -1)
 	add_subdirectory (lua)
 endif ()
+
+list (FIND BINDINGS "swig_ruby" FINDEX)
+if (FINDEX GREATER -1)
+	add_subdirectory (ruby)
+endif ()
