ruby: add ruby wrapper module kdb
the swig created binding module was renamed to 'kdb_' (_kdb is not possible
due to Ruby naming conventions), which is wrapped by a native Ruby module
'kdb'. This allows embedding Ruby code for easier overriding.

The kdb::Key constructor now supports "variable" "keyword" arguments, which
allows very flexible key creation.

--- a/src/bindings/swig/ruby/tests/CMakeLists.txt
+++ b/src/bindings/swig/ruby/tests/CMakeLists.txt
@@ -12,7 +12,7 @@ foreach (file ${TESTS})
         set_property (
                 TEST ${name}
                 PROPERTY ENVIRONMENT
-                "RUBYLIB=${CMAKE_CURRENT_BINARY_DIR}/.."
+                "RUBYLIB=${CMAKE_CURRENT_BINARY_DIR}/..:${CMAKE_CURRENT_SOURCE_DIR}/.."
         )
     
 endforeach (file ${TESTS})
