ruby: no kdb.rb any more, generate 'Kdb' directly
We left the approach of having generating a 'kdb_' module by SWIG and
use a Ruby native 'kdb' module which includes the generated one.
The main problem with this approach: all Keys created by the 'kdb_'
module (e.g. meta data keys) would have type 'Kdb_::Key' and thus
is missing the Ruby implemented additions of 'Kdb::Key'.

So we have left this path and took the harder way of implementing all
adoptions directly with C/SWIG.

Luckily we have found a really good solution for the va_list problem:
 * treat the va_list argument as Ruby Hash
 * 'misuse' the %exception feature of SWIG to write your own method
   invocation
 * after object create pass all additional arguments (available via
   the Ruby Hash object) one by one the newly created object

After all, the kdb.rb file is now obsolete.

--- a/src/bindings/swig/ruby/CMakeLists.txt
+++ b/src/bindings/swig/ruby/CMakeLists.txt
@@ -37,7 +37,7 @@ else()
 
   swig_add_module (swig-ruby ruby kdb.i)
   swig_link_libraries (swig-ruby elektra-core elektra-kdb)
-  set_target_properties (swig-ruby PROPERTIES OUTPUT_NAME kdb_)
+  set_target_properties (swig-ruby PROPERTIES OUTPUT_NAME kdb)
   
   set_source_files_properties (
           ${swig_generated_file_fullname} PROPERTIES 
