conditionals: now with topological sort

--- a/src/plugins/conditionals/CMakeLists.txt
+++ b/src/plugins/conditionals/CMakeLists.txt
@@ -4,5 +4,9 @@ add_plugin (conditionals
 	SOURCES
 		conditionals.h
 		conditionals.c
+	LINK_ELEKTRA
+		elektra-ease
+		elektra-meta
+		elektra-proposal
 	ADD_TEST
 	)
