add_plugin: INCLUDE_SYSTEM_DIRECTORIES
see #946 #915

--- a/src/plugins/tcl/CMakeLists.txt
+++ b/src/plugins/tcl/CMakeLists.txt
@@ -7,7 +7,7 @@ endif ()
 
 add_plugin(tcl
 	CPP
-	INCLUDE_DIRECTORIES
+	INCLUDE_SYSTEM_DIRECTORIES
 		${Boost_INCLUDE_DIR}
 	SOURCES
 		tcl.hpp tcl.cpp
