logger: also provide symbol when logging is disabled
this is useful when plugins were compiled with logger,
but the core was compiled without

--- a/src/libs/elektra/CMakeLists.txt
+++ b/src/libs/elektra/CMakeLists.txt
@@ -49,9 +49,11 @@ file (GLOB SRC_FILES *.c)
 #remove those we don't want..
 file (GLOB RM_FILES exportsymbols.c kdbmainpage.c)
 unset (RM_LOG_FILE)
-if (NOT HAVE_LOGGER)
+if (HAVE_LOGGER)
+	file (GLOB RM_LOG_FILE nolog.c)
+else (HAVE_LOGGER)
 	file (GLOB RM_LOG_FILE log.c)
-endif (NOT HAVE_LOGGER)
+endif (HAVE_LOGGER)
 list (REMOVE_ITEM SRC_FILES ${RM_FILES} ${RM_LOG_FILE})
 
 #remove the opmphm files
