--- a/.travis.yml
+++ b/.travis.yml
@@ -9,11 +9,11 @@ language: generic
 matrix:
   include:
     - os: osx
+      osx_image: xcode8
+    - os: osx
       osx_image: xcode7.3
     - os: osx
-      osx_image: xcode7
-    - os: osx
-      osx_image: beta-xcode6.1
+      osx_image: xcode6.4
 
 before_install:
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then
@@ -25,20 +25,13 @@ before_install:
       brew install gobject-introspection;
       brew install python3;
       brew install python;
-      brew install pygobject3 --with-python --with-python3;
       brew install lua;
       brew install yajl;
       brew install augeas --HEAD;
       brew install dbus;
       brew install qt5;
       brew install discount;
-      brew install libffi;
-      libffi_ver=$(brew ls --versions libffi | awk '{print $2}') &&
-      gi_ver=$(brew ls --versions gobject-introspection | awk '{print $2}') &&
-      PKG_CONFIG_PATH=/usr/local/Cellar/libffi/${libffi_ver}/lib/pkgconfig/ &&
-      PKG_CONFIG_PATH=$PKG_CONFIG_PATH:/usr/local/Cellar/gobject-introspection/${gi_ver}/lib/pkgconfig &&
-      luarocks install lgi;
-      which luarocks;
+      brew install libgit2;
       export Qt5_DIR=/usr/local/opt/qt5;
       brew config;
     fi
