crypto / base64: fix naming macros
Introduce ELEKTRA_PLUGIN_NAME_C which holds the plugin name (not as string, so the macro ELEKTRA_PLUGIN_FUNCTION can construct a valid function name)

--- a/src/plugins/base64/CMakeLists.txt
+++ b/src/plugins/base64/CMakeLists.txt
@@ -6,6 +6,7 @@ add_plugin (base64
 		base64.c
 	COMPILE_DEFINITIONS
 		ELEKTRA_PLUGIN_NAME=\"base64\"
+		ELEKTRA_PLUGIN_NAME_C=base64
 )
 
 if (ADDTESTING_PHASE)
