--- a/src/plugins/crypto/CMakeLists.txt
+++ b/src/plugins/crypto/CMakeLists.txt
@@ -138,6 +138,7 @@ add_plugin (crypto_gcrypt
 		${LIBGCRYPT_LIBRARIES}
 	COMPILE_DEFINITIONS
 		ELEKTRA_PLUGIN_NAME=\"crypto_gcrypt\"
+		ELEKTRA_PLUGIN_NAME_C=crypto
 		ELEKTRA_VARIANT=gcrypt
 		ELEKTRA_CRYPTO_API_GCRYPT
 )
@@ -156,6 +157,7 @@ add_plugin (crypto_openssl
 		${OPENSSL_LIBRARIES}
 	COMPILE_DEFINITIONS
 		ELEKTRA_PLUGIN_NAME=\"crypto_openssl\"
+		ELEKTRA_PLUGIN_NAME_C=crypto
 		ELEKTRA_VARIANT=openssl
 		ELEKTRA_CRYPTO_API_OPENSSL
 )
@@ -174,6 +176,7 @@ add_plugin (crypto_botan
 		${BOTAN_LIBRARIES}
 	COMPILE_DEFINITIONS
 		ELEKTRA_PLUGIN_NAME=\"crypto_botan\"
+		ELEKTRA_PLUGIN_NAME_C=crypto
 		ELEKTRA_VARIANT=botan
 		ELEKTRA_CRYPTO_API_BOTAN
 )
