Shell Recorder: Add Plugins syntax for test cases.

--- a/tests/shell/shell_recorder/CMakeLists.txt
+++ b/tests/shell/shell_recorder/CMakeLists.txt
@@ -18,8 +18,24 @@ if (ENABLE_KDB_TESTING)
 
         file (GLOB SCRIPT_TESTS *.esr)
         foreach (file ${SCRIPT_TESTS})
-                get_filename_component (name ${file} NAME)
+		file (READ ${file} content)
+		get_filename_component (name ${file} NAME)
                 get_filename_component (testname_we ${name} NAME_WE)
+                set (add 1)
+		string (REGEX MATCH "Plugins:[ ]?[a-zA-Z0-9;]*" neededPlugins "${content}")
+		string (LENGTH "${neededPlugins}" len)
+		if (${len} GREATER 8)
+			string (SUBSTRING "${neededPlugins}" 8 -1 neededPlugins)
+			string (STRIP "${neededPlugins}" neededPlugins)
+			foreach (p ${neededPlugins})
+				list (FIND ADDED_PLUGINS ${p} ret)
+				if (${ret} LESS 0)
+					message (STATUS "Exclude ${name} from Shell Recorder Test")
+					set (add 0)
+				endif (${ret} LESS 0)
+			endforeach (p)
+		endif (${len} GREATER 8)
+		if (${add})
                 add_test (
                         testshell_${testname_we}
                         "${CMAKE_CURRENT_BINARY_DIR}/shell_recorder.sh"
@@ -27,6 +43,7 @@ if (ENABLE_KDB_TESTING)
                         )
 
                 set_property(TEST testshell_${testname_we} PROPERTY LABELS memleak kdbtests)
+                endif (${add})
         endforeach (file ${SCRIPT_TESTS})
 
 endif (ENABLE_KDB_TESTING)
