--- a/src/tools/web/client/package.json
+++ b/src/tools/web/client/package.json
@@ -9,6 +9,8 @@
     "babel-preset-es2015": "^6.14.0",
     "babel-preset-react": "^6.11.1",
     "babel-preset-stage-0": "^6.5.0",
+    "redux-devtools": "^3.3.1",
+    "redux-devtools-inspector": "^0.8.0",
     "webpack": "^1.13.2",
     "webpack-dashboard": "^0.1.8",
     "webpack-dev-server": "^1.15.1"
