--- a/src/tools/web/client/.babelrc
+++ b/src/tools/web/client/.babelrc
@@ -1,6 +1,7 @@
 {
   "presets": ["es2015"],
   "plugins": [
-    "transform-object-rest-spread"
+    "transform-object-rest-spread",
+    "react-hot-loader/babel"
   ]
 }
