--- a/tests/shell/include_common.sh.in
+++ b/tests/shell/include_common.sh.in
@@ -210,6 +210,7 @@ is_not_rw_storage()
 	-o "x$PLUGIN" = "xdpkg" \
 	-o "x$PLUGIN" = "xregexstore" \
 	-o "x$PLUGIN" = "xpasswd" \
+	-o "x$PLUGIN" = "xsimplespeclang" \
 	-o "x$PLUGIN" = "xmozprefs"
 }
 
@@ -234,11 +235,6 @@ mktempfile_elektra()
 {
 	mktemp -t elektraenv.XXXXXXXXX 2>/dev/null || mktemp -t 'elektraenv'
 }
-
-
-
-
-
 
 
 
