doc: update already implemented metadata

--- a/doc/METADATA.ini
+++ b/doc/METADATA.ini
@@ -153,7 +153,7 @@ description= For this metadata only the presence is significant, not its value.
 
 [mountpoint]
 type=string
-status= proposed
+status= implemented
 usedby/tool= mount-spec
 description=indicates that the key represents a mountpoint
   
@@ -164,7 +164,7 @@ example=default.ecf
 
 [infos]
 type= string
-status= proposed
+status= implemented
 usedby/tool= mount-spec
 description= infos about the mountpoint
   
